--- a/new-portfolio/package.json
+++ b/new-portfolio/package.json
@@ -12,11 +12,13 @@
     "@heroicons/react": "^2.0.18",
     "framer-motion": "^11.0.3",
     "next": "14.0.3",
+    "npm": "^10.4.0",
     "react": "^18",
     "react-animated-numbers": "^0.17.1",
     "react-dom": "^18",
     "react-type-animation": "^3.2.0",
-    "resend": "^2.0.0"
+    "resend": "^2.0.0",
+    "vercel": "^33.5.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
