--- a/new-portfolio/package.json
+++ b/new-portfolio/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-type-animation": "^3.2.0",
     "resend": "^2.0.0",
+    "sharp": "^0.33.3",
     "vercel": "^33.7.1"
   },
   "devDependencies": {
