--- a/new-portfolio/package.json
+++ b/new-portfolio/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "framer-motion": "^11.0.3",
-    "next": "14.0.3",
+    "next": "^15.2.2",
     "npm": "^10.8.1",
     "react": "^18",
     "react-animated-numbers": "^0.17.1",
