--- a/new-portfolio/package.json
+++ b/new-portfolio/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "framer-motion": "^11.0.3",
+    "mailgun-js": "^0.22.0",
     "next": "^15.2.2",
     "npm": "^10.8.1",
     "react": "^18",
     "react-animated-numbers": "^0.17.1",
     "react-dom": "^18",
+    "react-toastify": "^11.0.5",
     "react-type-animation": "^3.2.0",
     "resend": "^2.0.0",
     "sharp": "^0.33.3",
