--- a/new-portfolio/package.json
+++ b/new-portfolio/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^11.0.3",
     "mailgun-js": "^0.22.0",
     "next": "^15.2.2",
